@startuml
'https://plantuml.com/class-diagram

package presentation {
class HomeScreen
class HomeViewmodel
interface GetPopularMoviesUseCase
interface GetFavoritesMoviesUseCase
}

package domain {
class GetFavoritesMoviesUseCaseImpl
class GetPopularMoviesUseCaseImpl
class MapMovieEntityToDomainModelUseCaseImpl
interface MapMovieEntityToDomainModelUseCase
interface HomeRepository

}

package data {
class HomeRepositoryImpl
interface HomeRemoteDataSource
class HomeRemoteDataSourceImpl
interface HomeLocalDataSource
class HomeLocalDataSourceImpl
}

HomeScreen *-- HomeViewmodel
HomeViewmodel o-- GetPopularMoviesUseCase
HomeViewmodel o-- GetFavoritesMoviesUseCase
GetPopularMoviesUseCaseImpl o-- HomeRepository
GetFavoritesMoviesUseCaseImpl *-- MapMovieEntityToDomainModelUseCase
GetFavoritesMoviesUseCaseImpl o-- HomeRepository
GetPopularMoviesUseCaseImpl *-- MapMovieEntityToDomainModelUseCase

HomeRepositoryImpl *-- HomeRemoteDataSource
HomeRepositoryImpl *-- HomeLocalDataSource

HomeRepositoryImpl <|-- HomeRepository
HomeRemoteDataSourceImpl <|-- HomeRemoteDataSource
HomeLocalDataSourceImpl <|-- HomeLocalDataSource

GetPopularMoviesUseCaseImpl <|-- GetPopularMoviesUseCase
GetFavoritesMoviesUseCaseImpl <|-- GetFavoritesMoviesUseCase
MapMovieEntityToDomainModelUseCaseImpl <|-- MapMovieEntityToDomainModelUseCase
@enduml
